--- a/lastwindow.ui
+++ b/lastwindow.ui
@@ -209,7 +209,7 @@
    <property name="geometry">
     <rect>
      <x>596</x>
-     <y>400</y>
+     <y>489</y>
      <width>185</width>
      <height>113</height>
     </rect>
@@ -260,10 +260,10 @@
   <widget class="QLabel" name="zj">
    <property name="geometry">
     <rect>
-     <x>660</x>
-     <y>160</y>
-     <width>121</width>
-     <height>101</height>
+     <x>878</x>
+     <y>490</y>
+     <width>181</width>
+     <height>161</height>
     </rect>
    </property>
    <property name="text">
@@ -273,10 +273,10 @@
   <widget class="QLabel" name="ah">
    <property name="geometry">
     <rect>
-     <x>650</x>
-     <y>370</y>
-     <width>121</width>
-     <height>101</height>
+     <x>775</x>
+     <y>398</y>
+     <width>151</width>
+     <height>181</height>
     </rect>
    </property>
    <property name="text">
@@ -286,10 +286,10 @@
   <widget class="QLabel" name="hlj">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>60</y>
-     <width>121</width>
-     <height>101</height>
+     <x>859</x>
+     <y>-20</y>
+     <width>411</width>
+     <height>311</height>
     </rect>
    </property>
    <property name="text">
@@ -299,10 +299,10 @@
   <widget class="QLabel" name="jl">
    <property name="geometry">
     <rect>
-     <x>510</x>
-     <y>110</y>
-     <width>121</width>
-     <height>101</height>
+     <x>937</x>
+     <y>151</y>
+     <width>251</width>
+     <height>185</height>
     </rect>
    </property>
    <property name="text">
@@ -312,10 +312,10 @@
   <widget class="QLabel" name="ln">
    <property name="geometry">
     <rect>
-     <x>710</x>
-     <y>100</y>
-     <width>121</width>
-     <height>101</height>
+     <x>890</x>
+     <y>191</y>
+     <width>201</width>
+     <height>201</height>
     </rect>
    </property>
    <property name="text">
@@ -325,10 +325,10 @@
   <widget class="QLabel" name="nmg">
    <property name="geometry">
     <rect>
-     <x>690</x>
-     <y>110</y>
-     <width>121</width>
-     <height>101</height>
+     <x>470</x>
+     <y>27</y>
+     <width>921</width>
+     <height>411</height>
     </rect>
    </property>
    <property name="text">
@@ -338,10 +338,10 @@
   <widget class="QLabel" name="xj">
    <property name="geometry">
     <rect>
-     <x>910</x>
-     <y>140</y>
-     <width>121</width>
-     <height>101</height>
+     <x>9</x>
+     <y>83</y>
+     <width>491</width>
+     <height>421</height>
     </rect>
    </property>
    <property name="text">
@@ -351,10 +351,10 @@
   <widget class="QLabel" name="fj">
    <property name="geometry">
     <rect>
-     <x>920</x>
-     <y>120</y>
-     <width>121</width>
-     <height>101</height>
+     <x>803</x>
+     <y>586</y>
+     <width>141</width>
+     <height>131</height>
     </rect>
    </property>
    <property name="text">
@@ -377,10 +377,10 @@
   <widget class="QLabel" name="sc">
    <property name="geometry">
     <rect>
-     <x>860</x>
-     <y>320</y>
-     <width>121</width>
-     <height>101</height>
+     <x>470</x>
+     <y>455</y>
+     <width>221</width>
+     <height>201</height>
     </rect>
    </property>
    <property name="text">
@@ -390,10 +390,10 @@
   <widget class="QLabel" name="js">
    <property name="geometry">
     <rect>
-     <x>890</x>
-     <y>180</y>
-     <width>121</width>
-     <height>101</height>
+     <x>823</x>
+     <y>426</y>
+     <width>151</width>
+     <height>141</height>
     </rect>
    </property>
    <property name="text">
@@ -407,6 +407,32 @@
      <y>321</y>
      <width>181</width>
      <height>171</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="sh">
+   <property name="geometry">
+    <rect>
+     <x>930</x>
+     <y>482</y>
+     <width>121</width>
+     <height>101</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="tj">
+   <property name="geometry">
+    <rect>
+     <x>837</x>
+     <y>297</y>
+     <width>161</width>
+     <height>101</height>
     </rect>
    </property>
    <property name="text">
@@ -444,6 +470,8 @@
   <zorder>sc</zorder>
   <zorder>js</zorder>
   <zorder>sd</zorder>
+  <zorder>sh</zorder>
+  <zorder>tj</zorder>
  </widget>
  <resources/>
  <connections/>
