--- a/lastwindow.ui
+++ b/lastwindow.ui
@@ -439,6 +439,370 @@
     <string/>
    </property>
   </widget>
+  <widget class="QLabel" name="label_zz">
+   <property name="geometry">
+    <rect>
+     <x>770</x>
+     <y>450</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_kf">
+   <property name="geometry">
+    <rect>
+     <x>810</x>
+     <y>450</y>
+     <width>51</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_ly">
+   <property name="geometry">
+    <rect>
+     <x>740</x>
+     <y>480</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_jn">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>440</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_qd">
+   <property name="geometry">
+    <rect>
+     <x>900</x>
+     <y>410</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_yt">
+   <property name="geometry">
+    <rect>
+     <x>920</x>
+     <y>400</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_rz">
+   <property name="geometry">
+    <rect>
+     <x>870</x>
+     <y>432</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_nc">
+   <property name="geometry">
+    <rect>
+     <x>790</x>
+     <y>600</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_jj">
+   <property name="geometry">
+    <rect>
+     <x>780</x>
+     <y>580</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_sr">
+   <property name="geometry">
+    <rect>
+     <x>838</x>
+     <y>578</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_gz">
+   <property name="geometry">
+    <rect>
+     <x>790</x>
+     <y>665</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_cd">
+   <property name="geometry">
+    <rect>
+     <x>545</x>
+     <y>526</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_zg">
+   <property name="geometry">
+    <rect>
+     <x>565</x>
+     <y>542</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_my">
+   <property name="geometry">
+    <rect>
+     <x>565</x>
+     <y>502</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_luzhou">
+   <property name="geometry">
+    <rect>
+     <x>590</x>
+     <y>562</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_nj">
+   <property name="geometry">
+    <rect>
+     <x>865</x>
+     <y>515</y>
+     <width>51</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_xz">
+   <property name="geometry">
+    <rect>
+     <x>860</x>
+     <y>450</y>
+     <width>51</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_yz">
+   <property name="geometry">
+    <rect>
+     <x>880</x>
+     <y>482</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_heb">
+   <property name="geometry">
+    <rect>
+     <x>1170</x>
+     <y>180</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_cc">
+   <property name="geometry">
+    <rect>
+     <x>1170</x>
+     <y>180</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_bx">
+   <property name="geometry">
+    <rect>
+     <x>1170</x>
+     <y>180</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_hhht">
+   <property name="geometry">
+    <rect>
+     <x>1170</x>
+     <y>200</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_wlmq">
+   <property name="geometry">
+    <rect>
+     <x>1170</x>
+     <y>200</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_xm">
+   <property name="geometry">
+    <rect>
+     <x>1170</x>
+     <y>200</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_qz">
+   <property name="geometry">
+    <rect>
+     <x>1170</x>
+     <y>200</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_fz">
+   <property name="geometry">
+    <rect>
+     <x>1170</x>
+     <y>200</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_hz">
+   <property name="geometry">
+    <rect>
+     <x>1170</x>
+     <y>200</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_hf">
+   <property name="geometry">
+    <rect>
+     <x>1170</x>
+     <y>200</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
   <zorder>hb</zorder>
   <zorder>bj</zorder>
   <zorder>cq</zorder>
@@ -472,6 +836,34 @@
   <zorder>sd</zorder>
   <zorder>sh</zorder>
   <zorder>tj</zorder>
+  <zorder>label_zz</zorder>
+  <zorder>label_kf</zorder>
+  <zorder>label_ly</zorder>
+  <zorder>label_jn</zorder>
+  <zorder>label_qd</zorder>
+  <zorder>label_yt</zorder>
+  <zorder>label_rz</zorder>
+  <zorder>label_nc</zorder>
+  <zorder>label_jj</zorder>
+  <zorder>label_sr</zorder>
+  <zorder>label_gz</zorder>
+  <zorder>label_cd</zorder>
+  <zorder>label_zg</zorder>
+  <zorder>label_my</zorder>
+  <zorder>label_luzhou</zorder>
+  <zorder>label_nj</zorder>
+  <zorder>label_xz</zorder>
+  <zorder>label_yz</zorder>
+  <zorder>label_heb</zorder>
+  <zorder>label_cc</zorder>
+  <zorder>label_bx</zorder>
+  <zorder>label_hhht</zorder>
+  <zorder>label_wlmq</zorder>
+  <zorder>label_xm</zorder>
+  <zorder>label_qz</zorder>
+  <zorder>label_fz</zorder>
+  <zorder>label_hz</zorder>
+  <zorder>label_hf</zorder>
  </widget>
  <resources/>
  <connections/>
