--- a/lastwindow.ui
+++ b/lastwindow.ui
@@ -803,6 +803,19 @@
     <string/>
    </property>
   </widget>
+  <widget class="QLabel" name="result">
+   <property name="geometry">
+    <rect>
+     <x>540</x>
+     <y>40</y>
+     <width>361</width>
+     <height>111</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
   <zorder>hb</zorder>
   <zorder>bj</zorder>
   <zorder>cq</zorder>
@@ -864,6 +877,7 @@
   <zorder>label_fz</zorder>
   <zorder>label_hz</zorder>
   <zorder>label_hf</zorder>
+  <zorder>result</zorder>
  </widget>
  <resources/>
  <connections/>
