--- a/subwindow.ui
+++ b/subwindow.ui
@@ -13,6 +13,79 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QScrollBar:vertical
+{
+    margin:30px 0px 30px 0px;
+    background-color:#0bb4b5;
+    border: 0px;
+    width:30px;    
+}
+QScrollBar::handle:vertical
+{
+    background-color:#1ca9b3;
+    width:30px;
+    border-radius:7px;
+}
+QScrollBar::handle:vertical:hover
+{
+    background-color:#0bb4b5;
+    width:30px;
+    border-radius:7px;
+}
+QScrollBar::add-line:vertical
+{
+    subcontrol-origin: margin;
+    border:1px solid rgb(240,241,239);
+    height:30px;
+}
+
+QScrollBar::sub-line:vertical
+{
+   subcontrol-origin: margin;
+    border:1px solid rgb(240,241,239);
+    height:30px;
+}
+QScrollBar::add-page:vertical
+{
+  background-color:rgb(240,241,239);
+}
+
+QScrollBar::sub-page:vertical
+{
+    background-color:rgb(240,241,239); 
+}
+QScrollBar::up-arrow:vertical
+{
+  border:0px;
+  width:30px;
+  height:30px;
+  border-image:url(&quot;:/Icons/up_Arrow.png&quot;);
+}
+
+QScrollBar::up-arrow:vertical:pressed
+{
+    border:0px;
+    width:30px;
+    height:30px;
+    border-image:url(&quot;:/Icons/up_Arrow_down.png&quot;);
+}
+QScrollBar::down-arrow:vertical
+{
+    border:0px;
+    width:30px;
+    height:30px;
+    border-image:url(&quot;:/Icons/down_Arrow.png&quot;);
+}
+
+QScrollBar::down-arrow:vertical:pressed 
+{
+    border:0px;
+    width:30px;
+    height:30px;
+    border-image:url(&quot;:/Icons/down_Arrow_down.png&quot;);
+}</string>
+  </property>
   <widget class="QStackedWidget" name="stackedWidget">
    <property name="enabled">
     <bool>true</bool>
@@ -451,8 +524,8 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>0</y>
-      <width>138</width>
+      <y>-33</y>
+      <width>129</width>
       <height>575</height>
      </rect>
     </property>
