--- a/lastwindow.ui
+++ b/lastwindow.ui
@@ -810,7 +810,7 @@
    <property name="geometry">
     <rect>
      <x>430</x>
-     <y>91</y>
+     <y>71</y>
      <width>371</width>
      <height>161</height>
     </rect>
@@ -833,6 +833,35 @@
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="count">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>70</y>
+     <width>51</width>
+     <height>91</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="rate">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>70</y>
+     <width>121</width>
+     <height>161</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
   <zorder>hb</zorder>
@@ -898,6 +927,8 @@
   <zorder>cityCount</zorder>
   <zorder>userRate</zorder>
   <zorder>username</zorder>
+  <zorder>count</zorder>
+  <zorder>rate</zorder>
  </widget>
  <resources/>
  <connections/>
